--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       January 2016 - August 2021
       <ul>
         <li>Conduct inspections and tests on incoming materials, components, or finished products to ensure they meet defined quality standards and specifications.</li>
-        <li>Use various tools, instruments, and equipment, including Cooordinate Measuring Machine (CMM) to perform physical, visual, and functional testing.</li>
+        <li>Use various tools, instruments, and equipment, including Coordinate Measuring Machine (CMM) to perform physical, visual, and functional testing.</li>
         <li>Follow established testing protocols and document test results accurately and comprehensively.</li>
         <li>Identify and report any non-conformities, deviations, or issues discovered during testing or inspections.</li>
         <li>Maintain detailed and organized records of quality control activities, including test reports, inspection logs, and quality assurance documentation.</li>
@@ -81,11 +81,11 @@
       <ul>
         <li>HTML</li>
         <li>CSS</li>
-        <li>JavaScript</li>
         <li>Python</li>
         <li>Java</li>
         <li>Q-Pulse</li>
         <li>SQL</li>
+        <li>SVN</li>
       </ul>
     </p>
     <hr />
