--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       <ul>
         <li>HTML</li>
         <li>CSS</li>
+        <li>Bootstrap</li>
         <li>Python</li>
         <li>Java</li>
         <li>Q-Pulse</li>
