--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <ul>
         <li><a href="./contact.html">Contact Details</a></li>
         <li><a href="./hobbies.html">Hobbies</a></li>
-        <li><a href="https://cieslik85.github.io/Resume/">Meet Me</a></li>
+        <li><a href="https://cieslik85.github.io/MeetMe/">Meet Me</a></li>
       </ul>
     </p>
     <hr />
